fix ripple effect overflow

--- a/src/components/RippleEffect.css
+++ b/src/components/RippleEffect.css
@@ -1,27 +1,39 @@
+.ripple-effect {
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+}
+
 span.ripple {
-  z-index: -1;
-  position: absolute;
-  border-radius: 50%;
-  background-color: #33AAFF22;
-  
-  --size: 100px;
-  width: var(--size);
-  height: var(--size);
-  margin-left: calc(var(--size) * -0.5);
-  margin-top: calc(var(--size) * -0.5);
-  
-  animation: ripple 1s ease-in;
-  opacity: 0;
-  pointer-events: none;
+    z-index: -1;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #33AAFF22;
+
+    --size: 100px;
+    width: var(--size);
+    height: var(--size);
+    margin-left: calc(var(--size) * -0.5);
+    margin-top: calc(var(--size) * -0.5);
+
+    animation: ripple 1s ease-in;
+    opacity: 0;
+    pointer-events: none;
+    transform: scale(10);
 }
 
 @keyframes ripple {
-  from {
-    opacity: 1;
-    transform: scale(0);
-  }
-  to {
-    opacity: 0;
-    transform: scale(10);
-  }
+    from {
+        opacity: 1;
+        transform: scale(0);
+    }
+
+    to {
+        opacity: 0;
+        transform: scale(10);
+    }
 }
